[gd_scene load_steps=2 format=3 uid="uid://b7nclbgkw6veg"]

[ext_resource type="Script" uid="uid://u74timy68p5t" path="res://src/hud/match_debug_hud.gd" id="1_88p7u"]

[node name="MatchDebugHud" type="CanvasLayer"]
layer = 128
script = ExtResource("1_88p7u")

[node name="DebugHud" type="Control" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1146.0
offset_top = 8.0
offset_right = -746.0
offset_bottom = 408.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugHud"]
layout_mode = 1
offset_right = 300.0
offset_bottom = 452.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="DebugHud/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 18
text = "Tennis Match"

[node name="State" type="Label" parent="DebugHud/VBoxContainer"]
modulate = Color(0.0980392, 1, 0, 1)
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 18
text = "State:"

[node name="ValidServeZone" type="Label" parent="DebugHud/VBoxContainer"]
modulate = Color(0.797538, 0.551832, 0, 1)
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "Valid Service Zone:"

[node name="ValidRallyZone" type="Label" parent="DebugHud/VBoxContainer"]
modulate = Color(0, 1, 1, 1)
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "Valid Rally Zone: "

[node name="GroundContacts" type="Label" parent="DebugHud/VBoxContainer"]
layout_mode = 2

[node name="LastHitter" type="Label" parent="DebugHud/VBoxContainer"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
